--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
             font-size: 8vw;
             font-weight: bold;
             color: white; /* Set number color to white */
-            border: 2px solid red; /* Red outline around the number */
-            padding: 1vw;
-            border-radius: 10px;
+            text-shadow: 2px 2px 4px red, -2px -2px 4px red, 2px -2px 4px red, -2px 2px 4px red; /* Red outline effect on the digits */
         }
 
         .button {
