--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
             font-size: 4vw;
             font-weight: bold;
             color: white;
-            border: 2px solid #8B0000; /* Red contrast outline */
             background-color: transparent;
-            border-radius: 0%;
+            border: none; /* Removed red outline */
+            border-radius: 0%; /* Square shape */
             cursor: pointer;
             display: flex;
             justify-content: center;
