--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             font-family: 'Eurostile', sans-serif;
             text-align: center;
             /* Changed to background image */
-            background-image: url('your_image_url_here.png'); /* Replace with your image URL */
+            background-image: url('https://github.com/boradeprajyot4701/Production_Code/blob/main/Screenshot%202025-02-17%20180443.jpg'); /* Replace with your image URL */
             background-size: cover; /* or contain, depending on your preference */
             background-repeat: no-repeat;
             color: white;
