--- a/index.html
+++ b/index.html
@@ -4,164 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Production Dashboard</title>
-    <style>
-        @import url('https://fonts.cdnfonts.com/css/eurostile');
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Eurostile', sans-serif;
-            text-align: center;
-            background-color: #1E1E1E;
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            width: 100vw;
-            flex-direction: column;
-            overflow: hidden;
-            padding: 20px;
-        }
-
-        #heading {
-            font-size: 10vw;
-            font-weight: bold;
-            text-decoration: underline;
-            margin-bottom: 20px;
-        }
-
-        .date-time-container {
-            display: flex;
-            justify-content: space-between;
-            width: 90%;
-            max-width: 800px;
-            font-size: 4vw;
-            font-weight: bold;
-            margin-bottom: 20px;
-        }
-
-        #date {
-            color: lightgreen;
-            text-align: left;
-        }
-
-        #time {
-            color: lightgreen;
-            text-align: right;
-        }
-
-        .container {
-            background: #1e1e1e;
-            padding: 5vh;
-            border-radius: 15px;
-            width: 100%;
-            max-width: 90%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            box-sizing: border-box;
-        }
-
-        .info {
-            font-size: 6vw;
-            margin: 3vh 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 2vw;
-        }
-
-        .data {
-            font-size: 8vw;
-            font-weight: bold;
-            color: white;
-            text-shadow: 2px 2px 4px red, -2px -2px 4px red, 2px -2px 4px red, -2px 2px 4px red;
-        }
-
-        .button {
-            width: 6vw;
-            height: 6vw;
-            font-size: 4vw;
-            font-weight: bold;
-            color: white;
-            background-color: transparent;
-            border: none;
-            border-radius: 0%;
-            cursor: pointer;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            transition: 0.3s;
-        }
-
-        .increase {
-            color: lightgreen;
-        }
-
-        .increase:hover {
-            background-color: lightgreen;
-            color: black;
-        }
-
-        .decrease {
-            color: red;
-        }
-
-        .decrease:hover {
-            background-color: red;
-            color: white;
-        }
-
-        .button:focus {
-            outline: none;
-        }
-
-        /* Adjustments for smaller screens */
-        @media (max-width: 768px) {
-            #heading {
-                font-size: 12vw;
-            }
-            .info {
-                font-size: 8vw;
-            }
-            .data {
-                font-size: 10vw;
-            }
-            .button {
-                font-size: 6vw;
-                padding: 1.5vw 3vw;
-            }
-        }
-
-        @media (max-width: 480px) {
-            #heading {
-                font-size: 14vw;
-            }
-            .info {
-                font-size: 10vw;
-            }
-            .data {
-                font-size: 12vw;
-            }
-            .button {
-                font-size: 7vw;
-                padding: 2vw 4vw;
-            }
-
-            .date-time-container {
-                font-size: 5vw;
-                width: 100%;
-                padding: 0 5vw;
-            }
-        }
-
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -176,60 +19,18 @@
         <p class="info">Prod. Target: <span class="data" id="target">Loading...</span></p>
         <p class="info">
             Today's Count: 
-            <button class="button decrease" onclick="decrementCount()">−</button>
+            <button class="button decrease" onclick="decrementCount()">
+                <img src="images/ic_round-minus.svg" alt="Minus">
+            </button>
             <span class="data" id="todayCount">Loading...</span>
-            <button class="button increase" onclick="incrementCount()">+</button>
+            <button class="button increase" onclick="incrementCount()">
+                <img src="images/ic_round-plus.svg" alt="Plus">
+            </button>
         </p>
         <p class="info">Total Count: <span class="data" id="totalCount">Loading...</span></p>
     </div>
 
-    <script>
-        const sheetURL = "https://script.google.com/macros/s/AKfycbwbu4jPsXFZAXnJryuyc2ADUZI2oFMr9i-JmC9OzFV8u8oh8a5y37UI94Z1tf95pzrT/exec"; 
-        const increaseURL = "https://script.google.com/macros/s/AKfycbwbu4jPsXFZAXnJryuyc2ADUZI2oFMr9i-JmC9OzFV8u8oh8a5y37UI94Z1tf95pzrT/exec?action=increment";
-        const decreaseURL = "https://script.google.com/macros/s/AKfycbwbu4jPsXFZAXnJryuyc2ADUZI2oFMr9i-JmC9OzFV8u8oh8a5y37UI94Z1tf95pzrT/exec?action=decrement";
-
-        function updateTime() {
-            let now = new Date();
-            let options = { day: 'numeric', month: 'long', year: 'numeric' };
-            document.getElementById("time").innerText = now.toLocaleTimeString();
-            document.getElementById("date").innerText = now.toLocaleDateString(undefined, options);
-        }
-
-        async function fetchSheetData() {
-            try {
-                let response = await fetch(sheetURL);
-                let data = await response.json();
-                document.getElementById("target").innerText = data.target;
-                document.getElementById("todayCount").innerText = data.todayCount;
-                document.getElementById("totalCount").innerText = data.totalCount;
-            } catch (error) {
-                console.error("Error fetching data:", error);
-            }
-        }
-
-        async function incrementCount() {
-            try {
-                await fetch(increaseURL);
-                fetchSheetData();
-            } catch (error) {
-                console.error("Error updating count:", error);
-            }
-        }
-
-        async function decrementCount() {
-            try {
-                await fetch(decreaseURL);
-                fetchSheetData();
-            } catch (error) {
-                console.error("Error decreasing count:", error);
-            }
-        }
-
-        setInterval(updateTime, 500);
-        setInterval(fetchSheetData, 500);
-        fetchSheetData();
-        updateTime();
-    </script>
+    <script src="script.js"></script>
 
 </body>
 </html>
