--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         }
 
         #date, #time {
-            color: lightgreen;
+            color: #FFD323;
         }
 
         .container {
