--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         .data {
             font-size: 8vw;
             font-weight: bold;
-            color: white;
+            color: #FFD323;
             text-shadow: 2px 2px 4px red, -2px -2px 4px red, 2px -2px 4px red, -2px 2px 4px red;
         }
 
@@ -93,20 +93,20 @@
         }
 
         .increase {
-            color: lightgreen;
+            color: #FFD323;
         }
 
         .increase:hover {
-            background-color: lightgreen;
-            color: black;
+            background-color:#FFD323;
+            color: white;
         }
 
         .decrease {
-            color: red;
+            color: #FFD323;
         }
 
         .decrease:hover {
-            background-color: red;
+            background-color: #FFD323;
             color: white;
         }
 
