--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             text-align: center;
             background-color: #1E1E1E;
             color: white;
-            display: flex;
+            display: #FFD323;
             justify-content: center;
             align-items: center;
             height: 100vh;
