--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         .date-time-container {
             display: flex;
-            justify-content: space-between;
+            justify-content: left;
             width: 90%;
             max-width: 800px;
             font-size: 4vw;
@@ -137,6 +137,7 @@
                 font-size: 5vw;
                 width: 100%;
                 padding: 0 5vw;
+                
             }
         }
 
@@ -148,6 +149,7 @@
     <img id="heading-img" src="images/Group 4327.png" alt="Revamp Moto Logo">
 
     <div class="date-time-container">
+        
         <span id="date">Loading...</span>
         <span id="time">Loading...</span>
     </div>
