--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         .date-time-container {
             display: flex;
-            justify-content: left;
+            justify-content: space-between;
             width: 90%;
             max-width: 800px;
             font-size: 4vw;
