--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
     <!-- Vertical Mascot -->
     <div id="mascot-container">
-        <img id="mascot-img" src="images/mascot.png" alt="Mascot">
+        <img id="mascot-img" src="images/RemoxNandan.png" alt="Mascot">
     </div>
 
     <script>
