--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         /* Vertical Mascot on the Right */
         #mascot-container {
             position: fixed;
-            right: 20px;
+            right: 5vw;
             top: 50%;
             transform: translateY(-50%);
             width: 150px;
