--- a/index.html
+++ b/index.html
@@ -66,21 +66,23 @@
             font-size: 2.5vw;
             margin: 3vh 0;
             display: flex;
-            flex-direction: column;
             align-items: center;
+            gap: 2vw;
         }
 
         .data {
-            font-size: 4.5vw;
+            font-size: 5vw;
             font-weight: bold;
             color: #FFD323;
             display: block;
+            min-width: 10vw;
+            text-align: center;
         }
 
         /* Button Styling */
         .button {
-            width: 5vw;
-            height: 5vw;
+            width: 6vw;
+            height: 6vw;
             font-size: 3vw;
             font-weight: bold;
             color: white;
@@ -92,7 +94,6 @@
             justify-content: center;
             align-items: center;
             transition: 0.3s;
-            margin: 10px;
         }
 
         .button:hover {
@@ -100,17 +101,19 @@
             color: #FFD323;
         }
 
-        /* Mascot Positioning */
+        /* Mascot - 30% of TV Screen */
         #mascot-container {
             position: absolute;
             right: 2vw;
             bottom: 5vh;
-            width: 8vw;
+            width: 30vw;
+            height: 30vh;
         }
 
         #mascot-img {
             width: 100%;
-            height: auto;
+            height: 100%;
+            object-fit: contain;
         }
 
         /* Responsive Adjustments */
@@ -134,7 +137,8 @@
             }
 
             #mascot-container {
-                width: 12vw;
+                width: 40vw;
+                height: 40vh;
             }
         }
     </style>
@@ -151,12 +155,13 @@
     <!-- Main Data Section -->
     <div class="container">
         <p class="info">Production Target: <br><span class="data" id="target">Loading...</span></p>
+        
         <p class="info">
-            Today's Count: <br>
             <button class="button" onclick="decrementCount()">−</button>
             <span class="data" id="todayCount">Loading...</span>
             <button class="button" onclick="incrementCount()">+</button>
         </p>
+
         <p class="info">Total Count: <br><span class="data" id="totalCount">Loading...</span></p>
     </div>
 
@@ -216,4 +221,3 @@
 
 </body>
 </html>
-
