--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
             display: flex;
             align-items: center;
             gap: 2vw;
+            flex-wrap: wrap;
         }
 
         .data {
             font-size: 5vw;
             font-weight: bold;
             color: #FFD323;
-            display: block;
             min-width: 10vw;
             text-align: center;
         }
@@ -101,13 +101,13 @@
             color: #FFD323;
         }
 
-        /* Mascot - 30% of TV Screen */
+        /* Mascot - 30% Width & 70% Height */
         #mascot-container {
             position: absolute;
             right: 2vw;
             bottom: 5vh;
             width: 30vw;
-            height: 30vh;
+            height: 70vh;  /* Increased to 70% of screen */
         }
 
         #mascot-img {
@@ -138,7 +138,7 @@
 
             #mascot-container {
                 width: 40vw;
-                height: 40vh;
+                height: 80vh; /* Adjust for smaller screens */
             }
         }
     </style>
@@ -157,6 +157,7 @@
         <p class="info">Production Target: <br><span class="data" id="target">Loading...</span></p>
         
         <p class="info">
+            <span>Today's Count:</span>
             <button class="button" onclick="decrementCount()">−</button>
             <span class="data" id="todayCount">Loading...</span>
             <button class="button" onclick="incrementCount()">+</button>
@@ -165,7 +166,7 @@
         <p class="info">Total Count: <br><span class="data" id="totalCount">Loading...</span></p>
     </div>
 
-    <!-- Mascot -->
+    <!-- Mascot (Larger) -->
     <div id="mascot-container">
         <img id="mascot-img" src="images/RemoxNandan.png" alt="Mascot">
     </div>
