--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             width: 100vw;
             overflow: hidden;
             padding: 20px;
+            position: relative;
         }
 
         /* Header */
@@ -60,6 +61,7 @@
             justify-content: center;
             align-items: center;
             text-align: center;
+            z-index: 2; /* Ensuring it's above mascot */
         }
 
         .info {
@@ -91,29 +93,32 @@
             border: none;
             cursor: pointer;
             display: flex;
-            justify-content: center;
             align-items: center;
+            justify-content: center;
             transition: 0.3s;
+            user-select: none; /* Prevents accidental text selection */
         }
 
-        .button:hover {
+        .button:active {
             background-color: white;
             color: #FFD323;
         }
 
-        /* Mascot - 30% Width & 70% Height */
+        /* Fix: Mascot Visibility on TV */
         #mascot-container {
-            position: absolute;
+            position: fixed;
             right: 2vw;
             bottom: 5vh;
             width: 30vw;
-            height: 70vh;  /* Increased to 70% of screen */
+            height: 70vh;
+            z-index: 1; /* Keep it behind the main content */
         }
 
         #mascot-img {
             width: 100%;
             height: 100%;
             object-fit: contain;
+            display: block; /* Ensure it's visible */
         }
 
         /* Responsive Adjustments */
@@ -166,7 +171,7 @@
         <p class="info">Total Count: <br><span class="data" id="totalCount">Loading...</span></p>
     </div>
 
-    <!-- Mascot (Larger) -->
+    <!-- Mascot (Fixed) -->
     <div id="mascot-container">
         <img id="mascot-img" src="images/RemoxNandan.png" alt="Mascot">
     </div>
@@ -198,6 +203,7 @@
 
         async function incrementCount() {
             try {
+                document.getElementById("todayCount").innerText = parseInt(document.getElementById("todayCount").innerText) + 1;
                 await fetch(increaseURL);
                 fetchSheetData();
             } catch (error) {
@@ -207,6 +213,7 @@
 
         async function decrementCount() {
             try {
+                document.getElementById("todayCount").innerText = parseInt(document.getElementById("todayCount").innerText) - 1;
                 await fetch(decreaseURL);
                 fetchSheetData();
             } catch (error) {
