--- a/index.html
+++ b/index.html
@@ -58,27 +58,50 @@
             max-width: 1200px;
             display: flex;
             flex-direction: column;
-            justify-content: center;
             align-items: center;
             text-align: center;
             z-index: 2;
+            position: relative;
         }
 
-        .info {
-            font-size: 2.5vw;
-            margin: 3vh 0;
+        /* Target & Total Inline */
+        .info-top {
             display: flex;
+            justify-content: space-around;
+            width: 100%;
+            font-size: 2.5vw;
+            margin-bottom: 3vh;
+        }
+
+        .info-top .info-item {
+            display: flex;
+            flex-direction: column;
             align-items: center;
-            gap: 2vw;
-            flex-wrap: wrap;
+            width: 45%;
         }
 
         .data {
             font-size: 5vw;
             font-weight: bold;
             color: #FFD323;
-            min-width: 10vw;
-            text-align: center;
+            margin-top: 10px;
+        }
+
+        /* Today's Count at Bottom Left */
+        #today-container {
+            position: absolute;
+            bottom: 2vh;
+            left: 3vw;
+            font-size: 3vw;
+            display: flex;
+            align-items: center;
+            gap: 2vw;
+        }
+
+        #todayCount {
+            font-size: 6vw;
+            font-weight: bold;
+            color: #FFD323;
         }
 
         /* Button Styling */
@@ -108,10 +131,10 @@
         /* ✅ Fixed Mascot Position */
         #mascot-container {
             position: absolute;
-            right: 1vw;  /* ✅ Moved further right */
-            bottom: 12vh; /* ✅ Moved higher */
-            width: 22vw;  /* ✅ Reduced width */
-            height: 50vh; /* ✅ Reduced height */
+            right: 1vw;
+            bottom: 12vh;
+            width: 22vw;
+            height: 50vh;
             z-index: 1;
             display: flex;
             justify-content: center;
@@ -131,12 +154,24 @@
                 font-size: 4vw;
             }
 
-            .info {
+            .info-top {
+                flex-direction: column;
+                align-items: center;
                 font-size: 5vw;
             }
 
             .data {
                 font-size: 6vw;
+            }
+
+            #today-container {
+                bottom: 5vh;
+                left: 5vw;
+                font-size: 5vw;
+            }
+
+            #todayCount {
+                font-size: 8vw;
             }
 
             .button {
@@ -146,9 +181,9 @@
             }
 
             #mascot-container {
-                width: 35vw;  /* Bigger mascot on smaller screens */
+                width: 35vw;
                 height: 60vh;
-                right: 5vw;   /* Adjust position */
+                right: 5vw;
                 bottom: 5vh;
             }
         }
@@ -165,16 +200,25 @@
 
     <!-- Main Data Section -->
     <div class="container">
-        <p class="info">Production Target: <br><span class="data" id="target">Loading...</span></p>
-        
-        <p class="info">
+        <!-- Target & Total Count Inline -->
+        <div class="info-top">
+            <div class="info-item">
+                <span>Production Target:</span>
+                <span class="data" id="target">Loading...</span>
+            </div>
+            <div class="info-item">
+                <span>Total Count:</span>
+                <span class="data" id="totalCount">Loading...</span>
+            </div>
+        </div>
+
+        <!-- Today's Count at Bottom Left -->
+        <div id="today-container">
             <span>Today's Count:</span>
             <button class="button" onclick="decrementCount()">−</button>
-            <span class="data" id="todayCount">Loading...</span>
+            <span id="todayCount">Loading...</span>
             <button class="button" onclick="incrementCount()">+</button>
-        </p>
-
-        <p class="info">Total Count: <br><span class="data" id="totalCount">Loading...</span></p>
+        </div>
     </div>
 
     <!-- ✅ Fixed Mascot -->
@@ -205,7 +249,6 @@
                 document.getElementById("target").innerText = data.target;
                 document.getElementById("totalCount").innerText = data.totalCount;
 
-                // ✅ Prevent past value flashes
                 if (parseInt(document.getElementById("todayCount").innerText) !== data.todayCount) {
                     todayCount = data.todayCount;
                     document.getElementById("todayCount").innerText = todayCount;
